deployment/k8s-example/deployment-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: donation
  labels:
    app: donation
spec:
  replicas: 3
  selector:
    matchLabels:
      app: donation
  template:
    metadata:
      labels:
        app: donation
    spec:
      containers:
      - name: donation
        image: cciobanu98/donation:latest
        ports:
        - containerPort: 3000
