deployment/k8s-example/pod-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: donation
spec:
  containers:
  - name: donation
    image: cciobanu98/donation:latest
    ports:
    - containerPort: 3000
