deployment/k8s-example/service-example.yaml
apiVersion: v1
kind: Service
metadata:
  name: donation
spec:
  selector:
    app: donation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
